--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 langauge: python
 python:
  - "3.5"
+install:
+  # Install conda
+  - sudo pip install conda
+  # install deps
+  - sudo conda init
+  - sudo conda update conda --yes
+  - deps='pip numpy'
+  - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
+  - export PATH=$HOME/py/bin:$PATH
+  # install your own package into the environment
+  - python setup.py install
 script: python utest_stuff.py
