--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 langauge: python
 python:
- - "3.5"
+ - 3.5
 notifications:
   email: false
 # Setup anaconda
@@ -15,6 +15,7 @@ before_install:
   - sudo ln -s /run/shm /dev/shm
 # Install packages
 install:
+  - echo $TRAVIS_PYTHON_VERSION
   - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy 
   - python setup.py install
 script:
